--- a/examples/UseUseGLMViaBCM/CMakeLists.txt
+++ b/examples/UseUseGLMViaBCM/CMakeLists.txt
@@ -7,13 +7,13 @@ set(dep UseGLMViaBCM)
 find_package(${dep} 0.1.0 REQUIRED)
 
 include(EchoTarget)
-echo_target_std(${dep})
+echo_target_std(Opticks::${dep})
 
 set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
 
 add_executable(${name} ${name}.cc)
 
-target_link_libraries( ${name} PUBLIC UseGLMViaBCM)
+target_link_libraries( ${name} PUBLIC Opticks::UseGLMViaBCM)
 
 install(TARGETS ${name} DESTINATION lib)
 
