adopt CMake BCM exported targets for SysRap, verify with UseSysRap example

--- a/examples/UseSysRap/CMakeLists.txt
+++ b/examples/UseSysRap/CMakeLists.txt
@@ -1,19 +1,20 @@
-cmake_minimum_required(VERSION 2.8.11 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
 
 set(name UseSysRap)
+
 project(${name})
 
-#include(/usr/local/opticks/config/SysRapTargets.cmake) 
-include(${OPTICKS_CONFIG_DIR}/SysRapTargets.cmake) 
-
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)  
+
+find_package(SysRap REQUIRED CONFIG)   
+## CONFIG option loads the targets, preventing  
+## use of the old variable based cmake/Modules/FindSysRap.cmake
+
+message(STATUS "SysRap_DIR : ${SysRap_DIR} ")
 
 add_executable(${name} ${name}.cc)
 
 target_link_libraries(${name} Opticks::SysRap)
 
 install(TARGETS ${name}  DESTINATION lib)
-
-
-
 
