find kludge workaround allowing downstream dependents of cmake supplied FindBoost.cmake to cooperate with BCM so can auto find boost libs

--- a/examples/UseBoost/CMakeLists.txt
+++ b/examples/UseBoost/CMakeLists.txt
@@ -1,18 +1,50 @@
-cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 
 set(name UseBoost)
 
-project(${name})
+project(${name} VERSION 0.1.0)
 
-#set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)  
+set(Boost_DEBUG ON)
+#set(Boost_NO_BOOST_CMAKE ON)
+
+include(GNUInstallDirs)
+set(CMAKE_INSTALL_INCLUDEDIR "include/${name}")
+
+find_package(BCM)
+include(BCMDeploy)
+include(EchoTarget)
 
 find_package(Boost REQUIRED COMPONENTS filesystem)   
 
-message(STATUS "Boost_DIR : ${Boost_DIR} ")
+## kludge that tees up arguments to find_dependency in generated export useboost-config.cmake 
+## so downstream will automatically do the above find_package 
+set_target_properties(Boost::filesystem PROPERTIES INTERFACE_FIND_PACKAGE_NAME "Boost REQUIRED COMPONENTS filesystem")
 
-add_executable(${name} ${name}.cc)
+echo_pfx_vars(Boost "VERSION;DIR;FOUND;FILESYSTEM_FOUND;SYSTEM_FOUND;INCLUDE_DIRS;LIBRARY_DIRS;FIND_COMPONENTS")
+echo_target_std(Boost::filesystem)
 
+
+set(SOURCES
+   ${name}.cc
+) 
+
+set(HEADERS
+   ${name}.hh
+)
+
+add_library(${name} SHARED ${SOURCES})
 target_link_libraries(${name} PUBLIC Boost::filesystem)
-
 install(TARGETS ${name}  DESTINATION lib)
+
+
+#add_executable(Test${name} Test${name}.cc)
+#target_link_libraries(Test${name} PUBLIC ${name} )
+#install(TARGETS Test${name}  DESTINATION lib)
+
+bcm_deploy(TARGETS ${name} NAMESPACE Opticks:: SKIP_HEADER_INSTALL) 
+
+install(FILES ${HEADERS}  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+
+echo_target_std(${name})
+
 
