--- a/examples/UseUseGLMRaw/CMakeLists.txt
+++ b/examples/UseUseGLMRaw/CMakeLists.txt
@@ -1,20 +1,20 @@
 cmake_minimum_required(VERSION 3.0)
-set(name UseUseGLM)
+set(name UseUseGLMRaw)
 project(${name} VERSION 0.1.0)
 
 set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
 
-find_package(UseGLM 0.1.0 REQUIRED)
+find_package(UseGLMRaw 0.1.0 REQUIRED)
 
 include(EchoTarget)
-echo_target(Opticks::UseGLM "INTERFACE_INCLUDE_DIRECTORIES;INTERFACE_LINK_LIBRARIES;INTERFACE_FIND_PACKAGE_NAME;INTERFACE_FIND_PACKAGE_VERSION;INTERFACE_FIND_PACKAGE_EXACT")   
+echo_target(Opticks::UseGLMRaw "INTERFACE_INCLUDE_DIRECTORIES;INTERFACE_LINK_LIBRARIES;INTERFACE_FIND_PACKAGE_NAME;INTERFACE_FIND_PACKAGE_VERSION;INTERFACE_FIND_PACKAGE_EXACT")   
 # must quote list variables when passing to function
 
 add_executable(${name}  ${name}.cc)
 
 target_link_libraries( ${name}
      PUBLIC
-        Opticks::UseGLM
+        Opticks::UseGLMRaw
 )
 
 install(TARGETS ${name}  DESTINATION lib)
