remove ViaBCM suffix on UseGLM for consistent example naming as ViaBCM is by now the standard way

--- a/examples/UseUseGLM/CMakeLists.txt
+++ b/examples/UseUseGLM/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.0)
-set(name UseUseGLMViaBCM)
+set(name UseUseGLM)
 project(${name} VERSION 0.1.0)
 
-set(dep UseGLMViaBCM)
+set(dep UseGLM)
 
 find_package(${dep} 0.1.0 REQUIRED)
 
@@ -13,7 +13,7 @@ set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
 
 add_executable(${name} ${name}.cc)
 
-target_link_libraries( ${name} PUBLIC Opticks::UseGLMViaBCM)
+target_link_libraries( ${name} PUBLIC Opticks::${dep})
 
 install(TARGETS ${name} DESTINATION lib)
 
