--- a/examples/UseNPY/CMakeLists.txt
+++ b/examples/UseNPY/CMakeLists.txt
@@ -1,22 +1,11 @@
-cmake_minimum_required(VERSION 2.8.11 FATAL_ERROR)
-
+cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 set(name UseNPY)
+project(${name} VERSION 0.1.0)
 
-project(${name})
+find_package(NPY REQUIRED CONFIG)
 
-include(${OPTICKS_CONFIG_DIR}/SysRapTargets.cmake) 
-include(${OPTICKS_CONFIG_DIR}/NPYTargets.cmake) 
-set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)  
-
-
+set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE) # pulls in libs from both PREFIX/lib and PREFIX/externals/lib 
 add_executable(${name} ${name}.cc)
-
-#target_include_directories(${name} PUBLIC Opticks::NPY)
-
-target_link_libraries(${name} Opticks::SysRap Opticks::NPY)
-
+target_link_libraries(${name} Opticks::NPY)
 install(TARGETS ${name}  DESTINATION lib)
-
-
-
 
