--- a/examples/UseOpenMesh/CMakeLists.txt
+++ b/examples/UseOpenMesh/CMakeLists.txt
@@ -9,6 +9,9 @@ find_package(OpenMesh REQUIRED MODULE)
 message(STATUS "OpenMesh_DIR : ${OpenMesh_DIR} ")
 message(STATUS "OpenMesh_FOUND : ${OpenMesh_FOUND} ")
 
+#include(EchoTarget)
+#echo_target_std(Opticks::OpenMesh)
+
 add_executable(${name} ${name}.cc)
 target_link_libraries(${name} PUBLIC Opticks::OpenMesh)
 
