--- a/opticksnpy/CMakeLists.txt
+++ b/opticksnpy/CMakeLists.txt
@@ -1,106 +1,39 @@
-cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 set(name NPY)
-project(${name})
-
+project(${name} VERSION 0.1.0)
 
 include(EnvBuildOptions)
 include(EnvCompilationFlags)
 
-find_package(OpticksBoost  REQUIRED)
-find_package(GLM    REQUIRED)
-find_package(SysRap REQUIRED)
-find_package(BoostRap REQUIRED)
-find_package(PLog REQUIRED)
-find_package(OpenMesh REQUIRED)
+include(GNUInstallDirs)
+set(CMAKE_INSTALL_INCLUDEDIR "include/${name}")
 
-message("NPY.OpenMesh_LIBRARIES :${OpenMesh_LIBRARIES} ")
-
-#find_package(NonExisting) 
-#message("NPY.NonExisting_FOUND       :${NonExisting_FOUND} ")
-#message("NPY.NonExisting_INCLUDE_DIRS:${NonExisting_INCLUDE_DIRS} ")
-#message("NPY.NonExisting_LIBRARIES   :${NonExisting_LIBRARIES} ")
-
-find_package(ImplicitMesher) 
-find_package(DualContouringSample) 
-find_package(YoctoGL) 
-find_package(CSGBSP) 
+find_package(BCM)
+include(BCMDeploy)
 
 
-#message("NPY.CSGBSP_INCLUDE_DIRS:${CSGBSP_INCLUDE_DIRS} ")
-#message("NPY.YoctoGL_INCLUDE_DIRS:${YoctoGL_INCLUDE_DIRS} ")
-#message("NPY.OpticksBoost_INCLUDE_DIRS:${OpticksBoost_INCLUDE_DIRS} ")
+## Targets conjured up from cmake/Modules/Find<Name>.cmake  
+## (external projects where I do not control CMakeLists.txt)
+find_package(GLM    REQUIRED MODULE)
+find_package(PLog   REQUIRED MODULE)
+find_package(OpenMesh REQUIRED MODULE)
 
+## Targets serialized via BCM export to PREFIX/lib/cmake/ 
+## (controlled from their CMakeLists.txt)
+find_package(SysRap REQUIRED CONFIG)
+find_package(BoostRap REQUIRED CONFIG)
+find_package(YoctoGL REQUIRED CONFIG) 
 
-set(INCLUDE_DIRS  
-   ${CMAKE_CURRENT_SOURCE_DIR}
-   ${OpticksBoost_INCLUDE_DIRS} 
-   ${GLM_INCLUDE_DIRS} 
-   ${PLog_INCLUDE_DIRS} 
-   ${SysRap_INCLUDE_DIRS} 
-   ${BoostRap_INCLUDE_DIRS} 
-   ${OpenMesh_INCLUDE_DIRS} 
-)
+## Optional targets
+find_package(ImplicitMesher CONFIG) 
+find_package(DualContouringSample CONFIG) 
 
+# recently rationalized ocsgbsp- has symbol visibility issues, so for now must skip NCSGBSP
+#find_package(CSGBSP CONFIG) 
 
-set(DEFINITIONS 
-   ${OpticksBoost_DEFINITIONS} 
-   ${GLM_DEFINITIONS} 
-   ${PLog_DEFINITIONS} 
-   ${SysRap_DEFINITIONS} 
-   ${BoostRap_DEFINITIONS} 
-   ${OpenMesh_DEFINITIONS}
-)
-
-set(PUBLIC_LIBRARIES
-   ${OpticksBoost_LIBRARIES}
-   ${PLog_LIBRARIES} 
-   ${GLM_LIBRARIES}
-   ${SysRap_LIBRARIES}
-   ${BoostRap_LIBRARIES}
-   ${OpenMesh_LIBRARIES}
-)
-
-set(PRIVATE_LIBRARIES
-)
-
-set(INTERFACE_LIBRARIES
-   ${GLM_LIBRARIES}
-)
-
-
-
-if(UNIX)
-   list(APPEND PRIVATE_LIBRARIES ssl crypto)
-endif(UNIX)
-
-
-if(ImplicitMesher_FOUND)
-   list(APPEND INCLUDE_DIRS ${ImplicitMesher_INCLUDE_DIRS})
-   list(APPEND DEFINITIONS -DWITH_ImplicitMesher ${ImplicitMesher_DEFINITIONS} )
-   list(APPEND PRIVATE_LIBRARIES ${ImplicitMesher_LIBRARIES})
-endif()
-
-if(DualContouringSample_FOUND)
-   list(APPEND INCLUDE_DIRS ${DualContouringSample_INCLUDE_DIRS})
-   list(APPEND DEFINITIONS -DWITH_DualContouringSample ${DualContouringSample_DEFINITIONS} )
-   list(APPEND PRIVATE_LIBRARIES ${DualContouringSample_LIBRARIES})
-endif()
-
-if(YoctoGL_FOUND)
-   list(APPEND INCLUDE_DIRS ${YoctoGL_INCLUDE_DIRS})
-   list(APPEND DEFINITIONS -DWITH_YoctoGL ${YoctoGL_DEFINITIONS} )
-   list(APPEND PRIVATE_LIBRARIES ${YoctoGL_LIBRARIES})
-endif()
-
-if(CSGBSP_FOUND)
-   list(APPEND INCLUDE_DIRS ${CSGBSP_INCLUDE_DIRS})
-   list(APPEND DEFINITIONS -DWITH_CSGBSP ${CSGBSP_DEFINITIONS})
-   list(APPEND PRIVATE_LIBRARIES ${CSGBSP_LIBRARIES})
-endif()
-
-
-message("NPY.DEFINITIONS : ${DEFINITIONS} ")
-
+## TODO 
+##     splitoff mesh related things depending on (OpenMesh ImplicitMesher DualContouringSample CSGBSP) 
+##     into a separate package, pick a name : OpticksMesh/OKMesh  ?
 
 
 set(SOURCES
@@ -351,114 +284,86 @@ NGLMExt.hpp
 NPolygonizer.hpp
 
 NLODConfig.hpp
-
-
-
-)
-
-
-set(_HEADERS
 )
 
 
 
-if(NonExisting_FOUND)
-   list(APPEND SOURCES  NNonExisting.cpp)
+if(YoctoGL_FOUND)  # this is no-longer optional
+   message(STATUS "NPY.YoctoGL_FOUND")
+   list(APPEND SOURCES  NGLTF.cpp  NScene.cpp  NSceneConfig.cpp NSDF.cpp N.cpp NJS.cpp NMeta.cpp)
+   list(APPEND HEADERS  NGLTF.hpp  NScene.hpp  NSceneConfig.hpp NSDF.hpp N.hpp NJS.hpp NMeta.hpp)
 endif()
 
 if(ImplicitMesher_FOUND)
-   message("NPY.ImplicitMesher_FOUND")
+   message(STATUS "NPY.ImplicitMesher_FOUND")
    list(APPEND SOURCES  NImplicitMesher.cpp)
    list(APPEND HEADERS  NImplicitMesher.hpp)
 endif()
 
 if(DualContouringSample_FOUND)
-   message("NPY.DualContouringSample_FOUND")
+   message(STATUS "NPY.DualContouringSample_FOUND")
    list(APPEND SOURCES  NDualContouringSample.cpp NOctools.cpp)
    list(APPEND HEADERS  NDualContouringSample.hpp NOct.hpp NOctools.hpp)
 endif()
 
 if(CSGBSP_FOUND)
-   message("NPY.CSGBSP_FOUND")
+   message(STATUS "NPY.CSGBSP_FOUND")
    list(APPEND SOURCES  NCSGBSP.cpp)
    list(APPEND HEADERS  NCSGBSP.hpp)
-endif()
-
-if(YoctoGL_FOUND)
-   message("NPY.YoctoGL_FOUND")
-   list(APPEND SOURCES  NGLTF.cpp  NScene.cpp  NSceneConfig.cpp NSDF.cpp N.cpp NJS.cpp NMeta.cpp)
-   list(APPEND HEADERS  NGLTF.hpp  NScene.hpp  NSceneConfig.hpp NSDF.hpp N.hpp NJS.hpp NMeta.hpp)
+else()
+   message(STATUS "NPY.CSGBSP_NOT-FOUND")
 endif()
 
 
-#include_directories( ${INCLUDE_DIRS} )
-add_definitions( ${DEFINITIONS} )
-add_library( ${name}  SHARED ${SOURCES} )
 
 
+add_library( ${name}  SHARED ${SOURCES})
 
-
-target_include_directories( ${name}
-              PUBLIC 
-                "$<BUILD_INTERFACE:${GLM_INCLUDE_DIRS}>"
-                "$<INSTALL_INTERFACE:${GLM_INCLUDE_DIRS}>"
-
-              PUBLIC
-                "$<BUILD_INTERFACE:${PLog_INCLUDE_DIRS}>"
-                "$<INSTALL_INTERFACE:${PLog_INCLUDE_DIRS}>"
-
-              PUBLIC
-                "$<BUILD_INTERFACE:${SysRap_INCLUDE_DIRS}>"
-
-              PUBLIC
-                "$<BUILD_INTERFACE:${OpticksBoost_INCLUDE_DIRS}>"
-
-              PUBLIC
-                "$<BUILD_INTERFACE:${BoostRap_INCLUDE_DIRS}>"
-
-              PUBLIC
-                "$<BUILD_INTERFACE:${OpenMesh_INCLUDE_DIRS}>"
-
-              PUBLIC
-                "$<BUILD_INTERFACE:${CSGBSP_INCLUDE_DIRS}>"
-
-
-              PRIVATE
-                 ${CMAKE_CURRENT_SOURCE_DIR} 
-                   
-)
-
-
-
+# needed for PyMCubes/marchingcubes.cpp
+target_include_directories( ${name} PUBLIC 
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+) 
 
 target_link_libraries( ${name} 
-              PUBLIC ${PUBLIC_LIBRARIES} 
-              PRIVATE ${PRIVATE_LIBRARIES} 
-              INTERFACE ${INTERFACE_LIBRARIES} 
+  PUBLIC 
+     Opticks::GLM
+     Opticks::SysRap 
+     Opticks::BoostRap 
+     Opticks::OpenMesh
+  PRIVATE
+     Opticks::PLog
 )
 
-install(TARGETS ${name}  EXPORT ${name}Targets 
-        LIBRARY DESTINATION lib 
-        INCLUDES DESTINATION include/${name}
-)
-install(FILES ${HEADERS}      DESTINATION include/${name})
-install(EXPORT ${name}Targets DESTINATION config NAMESPACE Opticks::)
+if(YoctoGL_FOUND)
+   target_link_libraries( ${name} PUBLIC Opticks::YoctoGL )  # headers included into PUBLIC headers need to be PUBLIC
+   target_compile_definitions(${name} PUBLIC WITH_YoctoGL )
+endif()
 
-export(EXPORT ${name}Targets
-  FILE "config/${name}Targets.cmake"
-  NAMESPACE Opticks::
-)
+if(ImplicitMesher_FOUND)
+   target_link_libraries( ${name} PRIVATE Opticks::ImplicitMesher )
+   target_compile_definitions(${name} PUBLIC WITH_ImplicitMesher )
+endif()
+
+if(DualContouringSample_FOUND)
+   target_link_libraries( ${name} PUBLIC Opticks::DualContouringSample )
+   target_compile_definitions(${name} PUBLIC WITH_DualContouringSample )
+endif()
+
+if(CSGBSP_FOUND)
+   target_link_libraries( ${name} PRIVATE Opticks::CSGBSP )
+   target_compile_definitions(${name} PUBLIC WITH_CSGBSP  )
+endif()
+
+if(UNIX)
+    target_link_libraries( ${name} PRIVATE ssl crypto )   # what needs these exactly ?
+endif()
 
 
-# with command :  c_enums_to_python.py NPart.h  > NPart_h.py 
-#add_custom_command(
-#    COMMAND ${PYTHON_EXECUTABLE} c_enums_to_python.py NPart.h
-#    DEPENDS NPart.h
-#    OUTPUTS NPart_h.py
-#    COMMENT "Generating python enum header ."
-#)
+bcm_deploy(TARGETS ${name} NAMESPACE Opticks:: SKIP_HEADER_INSTALL)
+
+install(FILES ${HEADERS}  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
 
 #add_subdirectory(tests EXCLUDE_FROM_ALL)
-#add_subdirectory(tests)
+add_subdirectory(tests)
 
